--- a/asavoir.html
+++ b/asavoir.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html><html lang="fr"><head>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>À savoir</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-</head><body>
+</head>
+<body>
 <header><h1 class="i18n" data-fr="À savoir" data-en="Good to know"></h1></header>
 <main class="content">
   <section class="cards vertical fullwidth">
@@ -17,14 +20,17 @@
     <a class="card" href="transport.html"><i class="fa-solid fa-bus"></i><p>Transport</p></a>
   </section>
 </main>
-
-  <nav class="bottom-nav">
-    <a href="bienvenue.html" class=""><i class="fa-solid fa-house"></i><span class="i18n" data-fr="Bienvenue" data-en="Welcome"></span></a>
-    <a href="asavoir.html" class="active"><i class="fa-solid fa-circle-info"></i><span class="i18n" data-fr="À savoir" data-en="To know"></span></a>
-    <a href="activites.html" class=""><i class="fa-solid fa-map-location-dot"></i><span class="i18n" data-en="Activities" data-fr="Activités"></span></a>
-  </nav>
+<nav class="bottom-nav">
+  <a href="bienvenue.html"><i class="fa-solid fa-house"></i><span class="i18n" data-fr="Bienvenue" data-en="Welcome"></span></a>
+  <a href="asavoir.html" class="active"><i class="fa-solid fa-circle-info"></i><span class="i18n" data-fr="À savoir" data-en="To know"></span></a>
+  <a href="activites.html"><i class="fa-solid fa-map-location-dot"></i><span class="i18n" data-fr="Activités" data-en="Activities"></span></a>
+</nav>
 <script>
-function setLang(lang){document.querySelectorAll('.i18n').forEach(el=>{el.innerHTML=el.dataset[lang];});localStorage.setItem('lang',lang);}
+function setLang(lang){
+  document.querySelectorAll('.i18n').forEach(el=>{el.innerHTML=el.dataset[lang];});
+  localStorage.setItem('lang',lang);
+}
 document.addEventListener('DOMContentLoaded',()=>{setLang(localStorage.getItem('lang')||'fr');});
 </script>
-</body></html>
+</body>
+</html>
