--- a/asavoir.html
+++ b/asavoir.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
-<<body class="page-asavoir">>
+<body class="page-asavoir">
 <header><h1 class="i18n" data-fr="À savoir" data-en="Good to know"></h1></header>
 <main class="content">
   <section class="cards vertical fullwidth">
