--- a/asavoir.html
+++ b/asavoir.html
@@ -6,39 +6,82 @@
   <title>À savoir</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  
-  <style>
-    main.content {
-      max-width: 100% !important;
-      padding-left: 0 !important;
-      padding-right: 0 !important;
-    }
-    .cards.vertical.fullwidth {
-      padding: 1rem !important;
-      gap: 1rem !important;
-    }
-  </style>
-  </head>
+</head>
 <body>
 <header><h1 class="i18n" data-fr="À savoir" data-en="Good to know"></h1></header>
+
 <main class="content">
-  <section class="cards vertical fullwidth">
-    <a class="card" href="arrivee.html"><i class="fa-solid fa-person-walking-luggage"></i><p class="i18n" data-fr="Arrivée" data-en="Arrival"></p></a>
-    <a class="card" href="depart.html"><i class="fa-solid fa-person-walking-arrow-right"></i><p class="i18n" data-fr="Départ" data-en="Departure"></p></a>
-    <a class="card" href="acces.html"><i class="fa-solid fa-door-open"></i><p class="i18n" data-fr="Votre accès" data-en="Your access"></p></a>
-    <a class="card" href="wifi.html"><i class="fa-solid fa-wifi"></i><p>Wi‑Fi</p></a>
-    <a class="card" href="equipement.html"><i class="fa-solid fa-couch"></i><p class="i18n" data-fr="Équipement" data-en="Equipment"></p></a>
-    <a class="card" href="reglement.html"><i class="fa-solid fa-scroll"></i><p class="i18n" data-fr="Règlement intérieur" data-en="House rules"></p></a>
-    <a class="card" href="urgence.html"><i class="fa-solid fa-triangle-exclamation"></i><p class="i18n" data-fr="Urgence" data-en="Emergency"></p></a>
-    <a class="card" href="dechets.html"><i class="fa-solid fa-recycle"></i><p class="i18n" data-fr="Déchets & Tri" data-en="Waste & Recycling"></p></a>
-    <a class="card" href="transport.html"><i class="fa-solid fa-bus"></i><p>Transport</p></a>
-  </section>
+  <a href="arrivee.html" class="card-link">
+    <div class="detail-card list-item">
+      <i class="fa-solid fa-person-walking-luggage"></i>
+      <p class="i18n" data-fr="Arrivée" data-en="Arrival"></p>
+    </div>
+  </a>
+
+  <a href="depart.html" class="card-link">
+    <div class="detail-card list-item">
+      <i class="fa-solid fa-person-walking-arrow-right"></i>
+      <p class="i18n" data-fr="Départ" data-en="Departure"></p>
+    </div>
+  </a>
+
+  <a href="acces.html" class="card-link">
+    <div class="detail-card list-item">
+      <i class="fa-solid fa-door-open"></i>
+      <p class="i18n" data-fr="Votre accès" data-en="Your access"></p>
+    </div>
+  </a>
+  
+  <a href="wifi.html" class="card-link">
+    <div class="detail-card list-item">
+      <i class="fa-solid fa-wifi"></i>
+      <p>Wi‑Fi</p>
+    </div>
+  </a>
+
+  <a href="equipement.html" class="card-link">
+    <div class="detail-card list-item">
+      <i class="fa-solid fa-couch"></i>
+      <p class="i18n" data-fr="Équipement" data-en="Equipment"></p>
+    </div>
+  </a>
+
+  <a href="reglement.html" class="card-link">
+    <div class="detail-card list-item">
+      <i class="fa-solid fa-scroll"></i>
+      <p class="i18n" data-fr="Règlement intérieur" data-en="House rules"></p>
+    </div>
+  </a>
+
+  <a href="urgence.html" class="card-link">
+    <div class="detail-card list-item">
+      <i class="fa-solid fa-triangle-exclamation"></i>
+      <p class="i18n" data-fr="Urgence" data-en="Emergency"></p>
+    </div>
+  </a>
+
+  <a href="dechets.html" class="card-link">
+    <div class="detail-card list-item">
+      <i class="fa-solid fa-recycle"></i>
+      <p class="i18n" data-fr="Déchets & Tri" data-en="Waste & Recycling"></p>
+    </div>
+  </a>
+
+  <a href="transport.html" class="card-link">
+    <div class="detail-card list-item">
+      <i class="fa-solid fa-bus"></i>
+      <p>Transport</p>
+    </div>
+  </a>
+
 </main>
+
 <nav class="bottom-nav">
   <a href="bienvenue.html"><i class="fa-solid fa-house"></i><span class="i18n" data-fr="Bienvenue" data-en="Welcome"></span></a>
   <a href="asavoir.html" class="active"><i class="fa-solid fa-circle-info"></i><span class="i18n" data-fr="À savoir" data-en="To know"></span></a>
   <a href="activites.html"><i class="fa-solid fa-map-location-dot"></i><span class="i18n" data-fr="Activités" data-en="Activities"></span></a>
 </nav>
+
 <script>
 function setLang(lang){
   document.querySelectorAll('.i18n').forEach(el=>{el.innerHTML=el.dataset[lang];});
