--- a/activites.html
+++ b/activites.html
@@ -9,13 +9,31 @@
 </head>
 <body>
 <header><h1 class="i18n" data-fr="Activités" data-en="Activities"></h1></header>
+
 <main class="content">
-  <section class="cards vertical fullwidth">
-    <a class="card" href="restaurants.html"><i class="fa-solid fa-utensils"></i><p class="i18n" data-fr="Restaurants & Bars" data-en="Restaurants & Bars"></p></a>
-    <a class="card" href="plages.html"><i class="fa-solid fa-umbrella-beach"></i><p class="i18n" data-fr="Plages & Loisirs" data-en="Beaches & Leisure"></p></a>
-    <a class="card" href="decouvrir.html"><i class="fa-solid fa-map-location-dot"></i><p class="i18n" data-fr="À découvrir" data-en="To discover"></p></a>
-  </section>
+  <a href="restaurants.html" class="card-link">
+    <div class="detail-card list-item">
+      <i class="fa-solid fa-utensils"></i>
+      <p class="i18n" data-fr="Restaurants & Bars" data-en="Restaurants & Bars"></p>
+    </div>
+  </a>
+
+  <a href="plages.html" class="card-link">
+    <div class="detail-card list-item">
+      <i class="fa-solid fa-umbrella-beach"></i>
+      <p class="i18n" data-fr="Plages & Loisirs" data-en="Beaches & Leisure"></p>
+    </div>
+  </a>
+
+  <a href="decouvrir.html" class="card-link">
+    <div class="detail-card list-item">
+      <i class="fa-solid fa-map-location-dot"></i>
+      <p class="i18n" data-fr="À découvrir" data-en="To discover"></p>
+    </div>
+  </a>
+
 </main>
+
 <nav class="bottom-nav">
   <a href="bienvenue.html"><i class="fa-solid fa-house"></i><span class="i18n" data-fr="Bienvenue" data-en="Welcome"></span></a>
   <a href="asavoir.html"><i class="fa-solid fa-circle-info"></i><span class="i18n" data-fr="À savoir" data-en="To know"></span></a>
