--- a/bienvenue.html
+++ b/bienvenue.html
@@ -20,40 +20,37 @@
 </header>
 
 <main class="content">
-  <!-- METEO COMPACTE -->
   <section class="weather-section">
     <div id="weatherCard" class="weather-card">
       <p class="i18n" data-fr="Chargement météo..." data-en="Loading weather..."></p>
     </div>
   </section>
 
-  <!-- INFORMATIONS UTILES -->
   <section>
     <div class="section-header">
       <h2 class="i18n" data-fr="Informations utiles" data-en="Useful info"></h2>
       <a href="asavoir.html" class="btn i18n" data-fr="Voir plus" data-en="See more"></a>
     </div>
     <div class="cards scroll-x">
-      <a class="card" href="acces.html">
-        <i class="fa-solid fa-door-open"></i>
-        <p class="i18n" data-fr="Votre accès" data-en="Your access"></p>
+      <a class="card" href="arrivee.html">
+        <i class="fa-solid fa-person-walking-luggage"></i>
+        <p class="i18n" data-fr="Arrivée" data-en="Arrival"></p>
+      </a>
+      <a class="card" href="depart.html">
+        <i class="fa-solid fa-person-walking-arrow-right"></i>
+        <p class="i18n" data-fr="Départ" data-en="Departure"></p>
       </a>
       <a class="card" href="wifi.html">
         <i class="fa-solid fa-wifi"></i>
         <p>Wi‑Fi</p>
       </a>
-      <a class="card" href="parking.html">
-        <i class="fa-solid fa-square-parking"></i>
-        <p>Parking</p>
-      </a>
-      <a class="card" href="code.html">
-        <i class="fa-solid fa-key"></i>
-        <p class="i18n" data-fr="Code d’entrée" data-en="Entry code"></p>
+      <a class="card" href="transport.html">
+        <i class="fa-solid fa-bus"></i>
+        <p class="i18n" data-fr="Transport" data-en="Transport"></p>
       </a>
     </div>
   </section>
 
-  <!-- ACTIVITÉS -->
   <section>
     <div class="section-header">
       <h2 class="i18n" data-fr="Activités" data-en="Activities"></h2>
@@ -75,7 +72,6 @@
     </div>
   </section>
 
-  <!-- ADRESSE -->
   <section>
     <div class="section-header">
       <h2 class="i18n" data-fr="Adresse" data-en="Address"></h2>
@@ -87,7 +83,6 @@
   </section>
 </main>
 
-<!-- MENU BAS -->
 <nav class="bottom-nav">
   <a href="bienvenue.html" class="active"><i class="fa-solid fa-house"></i><span class="i18n" data-fr="Bienvenue" data-en="Welcome"></span></a>
   <a href="asavoir.html"><i class="fa-solid fa-circle-info"></i><span class="i18n" data-fr="À savoir" data-en="To know"></span></a>
