--- a/activites.html
+++ b/activites.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Activités</title>
+  <title>Activités & Commerces</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-<header><h1 class="i18n" data-fr="Activités" data-en="Activities"></h1></header>
+<header><h1 class="i18n" data-fr="Activités & Commerces" data-en="Activities & Shops"></h1></header>
 
 <main class="content">
   <a href="restaurants.html" class="card-link">
@@ -31,13 +31,20 @@
       <p class="i18n" data-fr="À découvrir" data-en="To discover"></p>
     </div>
   </a>
+  
+  <a href="commerces.html" class="card-link">
+    <div class="detail-card list-item">
+      <i class="fa-solid fa-store"></i>
+      <p class="i18n" data-fr="Commerces de proximité" data-en="Local Shops"></p>
+    </div>
+  </a>
 
 </main>
 
 <nav class="bottom-nav">
   <a href="bienvenue.html"><i class="fa-solid fa-house"></i><span class="i18n" data-fr="Bienvenue" data-en="Welcome"></span></a>
   <a href="asavoir.html"><i class="fa-solid fa-circle-info"></i><span class="i18n" data-fr="À savoir" data-en="To know"></span></a>
-  <a href="activites.html" class="active"><i class="fa-solid fa-map-location-dot"></i><span class="i18n" data-fr="Activités" data-en="Activities"></span></a>
+  <a href="activites.html" class="active"><i class="fa-solid fa-map-location-dot"></i><span class="i18n" data-fr="Activités & Commerces" data-en="Activities & Shops"></span></a>
 </nav>
 <script>
 function setLang(lang){
